--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "default" # Currently available options are "default", "air"
+site_theme               : "modern" # Currently available options are "default", "air", "modern"
 title                    : "Jia-Ling Shi"
 title_separator          : "-"
 name                     : &name "Jia-Ling Shi"
