--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,6 +16,9 @@ main:
     
   - title: "Portfolio"
     url: /portfolio/
+
+  - title: "Projects"
+    url: /projects/
         
   - title: "Blog Posts"
     url: /year-archive/
